fixing footer nav spacing

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -345,6 +345,7 @@ Custom Nav Footer
 #dynamic-footer-nav {
   background-color: #f8f9fa; 
   border-top: 1px solid #ddd;
+  margin-bottom: 1rem;
 }
 
 #dynamic-footer-nav a {
